syntax/seal.output
Terminals unused in grammar

   ERROR
   INT
   STRING
   BOOL
   FLOAT


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: VAR variable ';'

    7 variableDecls: variableDecl
    8              | variableDecls variableDecl

    9 variable: OBJECTID TYPEID

   10 variables: variable
   11          | variables ',' variable

   12 callDecl: FUNC OBJECTID '(' variables ')' TYPEID stmtBlock
   13         | FUNC OBJECTID '(' ')' TYPEID stmtBlock

   14 stmt: ';'
   15     | expr ';'
   16     | ifStmt
   17     | whileStmt
   18     | forStmt
   19     | returnStmt
   20     | continueStmt
   21     | breakStmt
   22     | stmtBlock

   23 stmts: stmt
   24      | stmts stmt

   25 stmtBlock: '{' variableDecls stmts '}'
   26          | '{' variableDecls '}'
   27          | '{' stmts '}'
   28          | '{' '}'

   29 ifStmt: IF expr stmtBlock
   30       | IF expr stmtBlock ELSE stmtBlock

   31 whileStmt: WHILE expr stmtBlock

   32 forStmt: FOR expr ';' expr ';' expr stmtBlock
   33        | FOR expr ';' expr ';' stmtBlock
   34        | FOR expr ';' ';' expr stmtBlock
   35        | FOR ';' expr ';' expr stmtBlock
   36        | FOR expr ';' ';' stmtBlock
   37        | FOR ';' expr ';' stmtBlock
   38        | FOR ';' ';' expr stmtBlock
   39        | FOR ';' ';' stmtBlock

   40 returnStmt: RETURN expr ';'
   41           | RETURN ';'

   42 continueStmt: CONTINUE ';'

   43 breakStmt: BREAK ';'

   44 expr: lvalue
   45     | lvalue '=' expr
   46     | CONST_INT
   47     | CONST_STRING
   48     | CONST_FLOAT
   49     | CONST_BOOL
   50     | call
   51     | '(' expr ')'
   52     | '-' expr
   53     | expr '+' expr
   54     | expr '-' expr
   55     | expr '*' expr
   56     | expr '/' expr
   57     | expr '%' expr
   58     | expr '<' expr
   59     | expr LE expr
   60     | expr EQUAL expr
   61     | expr NE expr
   62     | expr GE expr
   63     | expr '>' expr
   64     | expr AND expr
   65     | expr OR expr
   66     | expr '^' expr
   67     | '!' expr
   68     | '~' expr
   69     | expr '&' expr
   70     | expr '|' expr

   71 call: OBJECTID '(' actuals ')'
   72     | OBJECTID '(' ')'

   73 lvalue: OBJECTID

   74 actual: expr

   75 actuals: actual
   76        | actuals ',' actual


Terminals, with rules where they appear

$end (0) 0
'!' (33) 67
'%' (37) 57
'&' (38) 69
'(' (40) 12 13 51 71 72
')' (41) 12 13 51 71 72
'*' (42) 55
'+' (43) 53
',' (44) 11 76
'-' (45) 52 54
'/' (47) 56
';' (59) 6 14 15 32 33 34 35 36 37 38 39 40 41 42 43
'<' (60) 58
'=' (61) 45
'>' (62) 63
'^' (94) 66
'{' (123) 25 26 27 28
'|' (124) 70
'}' (125) 25 26 27 28
'~' (126) 68
error (256)
IF (258) 29 30
ELSE (260) 30
WHILE (261) 31
FOR (262) 32 33 34 35 36 37 38 39
BREAK (263) 43
CONTINUE (264) 42
FUNC (265) 12 13
RETURN (266) 40 41
CONST_BOOL (267) 49
CONST_INT (268) 46
CONST_STRING (269) 47
CONST_FLOAT (270) 48
VAR (271) 6
ERROR (273)
AND (274) 64
OR (275) 65
EQUAL (276) 60
NE (277) 61
GE (278) 62
LE (279) 59
INT (280)
STRING (281)
BOOL (282)
FLOAT (283)
OBJECTID (284) 9 12 13 71 72 73
TYPEID (285) 9 12 13
UMINUS (287)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
decl_list (51)
    on left: 2 3, on right: 1 3
decl (52)
    on left: 4 5, on right: 2 3
variableDecl (53)
    on left: 6, on right: 4 7 8
variableDecls (54)
    on left: 7 8, on right: 8 25 26
variable (55)
    on left: 9, on right: 6 10 11
variables (56)
    on left: 10 11, on right: 11 12
callDecl (57)
    on left: 12 13, on right: 5
stmt (58)
    on left: 14 15 16 17 18 19 20 21 22, on right: 23 24
stmts (59)
    on left: 23 24, on right: 24 25 27
stmtBlock (60)
    on left: 25 26 27 28, on right: 12 13 22 29 30 31 32 33 34 35 36
    37 38 39
ifStmt (61)
    on left: 29 30, on right: 16
whileStmt (62)
    on left: 31, on right: 17
forStmt (63)
    on left: 32 33 34 35 36 37 38 39, on right: 18
returnStmt (64)
    on left: 40 41, on right: 19
continueStmt (65)
    on left: 42, on right: 20
breakStmt (66)
    on left: 43, on right: 21
expr (67)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70, on right: 15 29 30 31 32 33 34 35 36
    37 38 40 45 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 74
call (68)
    on left: 71 72, on right: 50
lvalue (69)
    on left: 73, on right: 44 45
actual (70)
    on left: 74, on right: 75 76
actuals (71)
    on left: 75 76, on right: 71 76


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl_list     go to state 4
    decl          go to state 5
    variableDecl  go to state 6
    callDecl      go to state 7


State 1

   12 callDecl: FUNC . OBJECTID '(' variables ')' TYPEID stmtBlock
   13         | FUNC . OBJECTID '(' ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 12
    variableDecl  go to state 6
    callDecl      go to state 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   12 callDecl: FUNC OBJECTID . '(' variables ')' TYPEID stmtBlock
   13         | FUNC OBJECTID . '(' ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

    9 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

   12 callDecl: FUNC OBJECTID '(' . variables ')' TYPEID stmtBlock
   13         | FUNC OBJECTID '(' . ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9
    ')'       shift, and go to state 16

    variable   go to state 17
    variables  go to state 18


State 14

    9 variable: OBJECTID TYPEID .

    $default  reduce using rule 9 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   13 callDecl: FUNC OBJECTID '(' ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 19


State 17

   10 variables: variable .

    $default  reduce using rule 10 (variables)


State 18

   11 variables: variables . ',' variable
   12 callDecl: FUNC OBJECTID '(' variables . ')' TYPEID stmtBlock

    ','  shift, and go to state 20
    ')'  shift, and go to state 21


State 19

   13 callDecl: FUNC OBJECTID '(' ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 23


State 20

   11 variables: variables ',' . variable

    OBJECTID  shift, and go to state 9

    variable  go to state 24


State 21

   12 callDecl: FUNC OBJECTID '(' variables ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 25


State 22

   25 stmtBlock: '{' . variableDecls stmts '}'
   26          | '{' . variableDecls '}'
   27          | '{' . stmts '}'
   28          | '{' . '}'

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 42

    variableDecl   go to state 43
    variableDecls  go to state 44
    stmt           go to state 45
    stmts          go to state 46
    stmtBlock      go to state 47
    ifStmt         go to state 48
    whileStmt      go to state 49
    forStmt        go to state 50
    returnStmt     go to state 51
    continueStmt   go to state 52
    breakStmt      go to state 53
    expr           go to state 54
    call           go to state 55
    lvalue         go to state 56


State 23

   13 callDecl: FUNC OBJECTID '(' ')' TYPEID stmtBlock .

    $default  reduce using rule 13 (callDecl)


State 24

   11 variables: variables ',' variable .

    $default  reduce using rule 11 (variables)


State 25

   12 callDecl: FUNC OBJECTID '(' variables ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 57


State 26

   29 ifStmt: IF . expr stmtBlock
   30       | IF . expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr    go to state 58
    call    go to state 55
    lvalue  go to state 56


State 27

   31 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr    go to state 59
    call    go to state 55
    lvalue  go to state 56


State 28

   32 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   33        | FOR . expr ';' expr ';' stmtBlock
   34        | FOR . expr ';' ';' expr stmtBlock
   35        | FOR . ';' expr ';' expr stmtBlock
   36        | FOR . expr ';' ';' stmtBlock
   37        | FOR . ';' expr ';' stmtBlock
   38        | FOR . ';' ';' expr stmtBlock
   39        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 60
    '('           shift, and go to state 41

    expr    go to state 61
    call    go to state 55
    lvalue  go to state 56


State 29

   43 breakStmt: BREAK . ';'

    ';'  shift, and go to state 62


State 30

   42 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 63


State 31

   40 returnStmt: RETURN . expr ';'
   41           | RETURN . ';'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 64
    '('           shift, and go to state 41

    expr    go to state 65
    call    go to state 55
    lvalue  go to state 56


State 32

   49 expr: CONST_BOOL .

    $default  reduce using rule 49 (expr)


State 33

   46 expr: CONST_INT .

    $default  reduce using rule 46 (expr)


State 34

   47 expr: CONST_STRING .

    $default  reduce using rule 47 (expr)


State 35

   48 expr: CONST_FLOAT .

    $default  reduce using rule 48 (expr)


State 36

   71 call: OBJECTID . '(' actuals ')'
   72     | OBJECTID . '(' ')'
   73 lvalue: OBJECTID .

    '('  shift, and go to state 66

    $default  reduce using rule 73 (lvalue)


State 37

   52 expr: '-' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr    go to state 67
    call    go to state 55
    lvalue  go to state 56


State 38

   67 expr: '!' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr    go to state 68
    call    go to state 55
    lvalue  go to state 56


State 39

   68 expr: '~' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr    go to state 69
    call    go to state 55
    lvalue  go to state 56


State 40

   14 stmt: ';' .

    $default  reduce using rule 14 (stmt)


State 41

   51 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr    go to state 70
    call    go to state 55
    lvalue  go to state 56


State 42

   28 stmtBlock: '{' '}' .

    $default  reduce using rule 28 (stmtBlock)


State 43

    7 variableDecls: variableDecl .

    $default  reduce using rule 7 (variableDecls)


State 44

    8 variableDecls: variableDecls . variableDecl
   25 stmtBlock: '{' variableDecls . stmts '}'
   26          | '{' variableDecls . '}'

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 71

    variableDecl  go to state 72
    stmt          go to state 45
    stmts         go to state 73
    stmtBlock     go to state 47
    ifStmt        go to state 48
    whileStmt     go to state 49
    forStmt       go to state 50
    returnStmt    go to state 51
    continueStmt  go to state 52
    breakStmt     go to state 53
    expr          go to state 54
    call          go to state 55
    lvalue        go to state 56


State 45

   23 stmts: stmt .

    $default  reduce using rule 23 (stmts)


State 46

   24 stmts: stmts . stmt
   27 stmtBlock: '{' stmts . '}'

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 74

    stmt          go to state 75
    stmtBlock     go to state 47
    ifStmt        go to state 48
    whileStmt     go to state 49
    forStmt       go to state 50
    returnStmt    go to state 51
    continueStmt  go to state 52
    breakStmt     go to state 53
    expr          go to state 54
    call          go to state 55
    lvalue        go to state 56


State 47

   22 stmt: stmtBlock .

    $default  reduce using rule 22 (stmt)


State 48

   16 stmt: ifStmt .

    $default  reduce using rule 16 (stmt)


State 49

   17 stmt: whileStmt .

    $default  reduce using rule 17 (stmt)


State 50

   18 stmt: forStmt .

    $default  reduce using rule 18 (stmt)


State 51

   19 stmt: returnStmt .

    $default  reduce using rule 19 (stmt)


State 52

   20 stmt: continueStmt .

    $default  reduce using rule 20 (stmt)


State 53

   21 stmt: breakStmt .

    $default  reduce using rule 21 (stmt)


State 54

   15 stmt: expr . ';'
   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 76
    OR     shift, and go to state 77
    EQUAL  shift, and go to state 78
    NE     shift, and go to state 79
    GE     shift, and go to state 80
    LE     shift, and go to state 81
    '<'    shift, and go to state 82
    '>'    shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87
    '%'    shift, and go to state 88
    '^'    shift, and go to state 89
    '&'    shift, and go to state 90
    '|'    shift, and go to state 91
    ';'    shift, and go to state 92


State 55

   50 expr: call .

    $default  reduce using rule 50 (expr)


State 56

   44 expr: lvalue .
   45     | lvalue . '=' expr

    '='  shift, and go to state 93

    $default  reduce using rule 44 (expr)


State 57

   12 callDecl: FUNC OBJECTID '(' variables ')' TYPEID stmtBlock .

    $default  reduce using rule 12 (callDecl)


State 58

   29 ifStmt: IF expr . stmtBlock
   30       | IF expr . stmtBlock ELSE stmtBlock
   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 76
    OR     shift, and go to state 77
    EQUAL  shift, and go to state 78
    NE     shift, and go to state 79
    GE     shift, and go to state 80
    LE     shift, and go to state 81
    '<'    shift, and go to state 82
    '>'    shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87
    '%'    shift, and go to state 88
    '^'    shift, and go to state 89
    '&'    shift, and go to state 90
    '|'    shift, and go to state 91
    '{'    shift, and go to state 22

    stmtBlock  go to state 94


State 59

   31 whileStmt: WHILE expr . stmtBlock
   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 76
    OR     shift, and go to state 77
    EQUAL  shift, and go to state 78
    NE     shift, and go to state 79
    GE     shift, and go to state 80
    LE     shift, and go to state 81
    '<'    shift, and go to state 82
    '>'    shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87
    '%'    shift, and go to state 88
    '^'    shift, and go to state 89
    '&'    shift, and go to state 90
    '|'    shift, and go to state 91
    '{'    shift, and go to state 22

    stmtBlock  go to state 95


State 60

   35 forStmt: FOR ';' . expr ';' expr stmtBlock
   37        | FOR ';' . expr ';' stmtBlock
   38        | FOR ';' . ';' expr stmtBlock
   39        | FOR ';' . ';' stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 96
    '('           shift, and go to state 41

    expr    go to state 97
    call    go to state 55
    lvalue  go to state 56


State 61
